y.output
Terminals unused in grammar

   DIGITO
   LETRA
   LETRA_MINUS
   LETRA_MAYUS
   LLAVE_I
   LLAVE_F
   COMENTARIO_I
   COMENTARIO_F


Gramática

    0 $accept: programa $end

    1 $@1: /* vacío */

    2 programa: INICIO_PROGRAMA $@1 bloque FIN_PROGRAMA

    3 bloque: lista_sentencias

    4 lista_sentencias: sentencia
    5                 | lista_sentencias sentencia

    6 sentencia: bloque_declaracion
    7          | asignacion
    8          | lectura
    9          | escritura
   10          | iteracion
   11          | seleccion
   12          | COMENTARIO

   13 asignacion: ID OP_ASIG expresion

   14 $@2: /* vacío */

   15 iteracion: WHILE PARENTESIS_I condicion PARENTESIS_F $@2 DO bloque ENDWHILE

   16 $@3: /* vacío */

   17 seleccion: IF PARENTESIS_I condicion PARENTESIS_F $@3 DO resto ENDIF

   18 condicion: comparacion

   19 $@4: /* vacío */

   20 $@5: /* vacío */

   21 condicion: comparacion $@4 OP_AND $@5 comparacion

   22 $@6: /* vacío */

   23 $@7: /* vacío */

   24 condicion: comparacion $@6 OP_OR $@7 comparacion

   25 $@8: /* vacío */

   26 condicion: OP_NOT $@8 comparacion
   27          | between
   28          | inlist

   29 $@9: /* vacío */

   30 $@10: /* vacío */

   31 comparacion: expresion $@9 COMP_MAYOR_ESTR $@10 expresion

   32 $@11: /* vacío */

   33 $@12: /* vacío */

   34 comparacion: expresion $@11 COMP_MENOR_ESTR $@12 expresion

   35 $@13: /* vacío */

   36 $@14: /* vacío */

   37 comparacion: expresion $@13 COMP_MAYOR_IGUAL $@14 expresion

   38 $@15: /* vacío */

   39 $@16: /* vacío */

   40 comparacion: expresion $@15 COMP_MENOR_IGUAL $@16 expresion

   41 $@17: /* vacío */

   42 $@18: /* vacío */

   43 comparacion: expresion $@17 COMP_IGUAL $@18 expresion

   44 $@19: /* vacío */

   45 $@20: /* vacío */

   46 comparacion: expresion $@19 COMP_DIST $@20 expresion

   47 resto: bloque

   48 $@21: /* vacío */

   49 $@22: /* vacío */

   50 resto: bloque $@21 ELSE $@22 bloque

   51 $@23: /* vacío */

   52 $@24: /* vacío */

   53 $@25: /* vacío */

   54 resto: bloque $@23 ELSIF PARENTESIS_I condicion PARENTESIS_F $@24 bloque ELSE $@25 bloque

   55 $@26: /* vacío */

   56 lectura: READ $@26 ID

   57 escritura: WRITE ID
   58          | WRITE CTE_STRING

   59 $@27: /* vacío */

   60 bloque_declaracion: DECVAR $@27 declaraciones ENDDEC

   61 declaraciones: declaraciones lista_id_y_tipo
   62              | lista_id_y_tipo

   63 lista_id_y_tipo: ID COMA lista_id_y_tipo
   64                | ID OP_DEC tipodato

   65 tipodato: INTEGER
   66         | FLOAT
   67         | STRING

   68 expresion: expresion OP_SUM termino
   69          | expresion OP_REST termino
   70          | termino

   71 termino: termino OP_MULT factor
   72        | termino OP_DIV factor
   73        | factor

   74 factor: CTE_INT
   75       | CTE_FLOAT
   76       | CTE_STRING
   77       | ID
   78       | PARENTESIS_I expresion PARENTESIS_F

   79 between: BETWEEN PARENTESIS_I ID COMA rango PARENTESIS_F

   80 rango: CORCHETE_I expresion PUNTO_Y_COMA expresion CORCHETE_F

   81 inlist: INLIST PARENTESIS_I ID PUNTO_Y_COMA lista_expresiones PARENTESIS_F

   82 lista_expresiones: CORCHETE_I expresiones CORCHETE_F

   83 expresiones: expresion
   84            | expresion PUNTO_Y_COMA expresiones


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
DIGITO (258)
LETRA (259)
LETRA_MINUS (260)
LETRA_MAYUS (261)
CTE_INT (262) 74
CTE_FLOAT (263) 75
CTE_STRING (264) 58 76
ID (265) 13 56 57 63 64 77 79 81
INICIO_PROGRAMA (266) 2
FIN_PROGRAMA (267) 2
OP_SUM (268) 68
OP_REST (269) 69
OP_MULT (270) 71
OP_DIV (271) 72
OP_ASIG (272) 13
OP_DEC (273) 64
OP_AND (274) 21
OP_OR (275) 24
OP_NOT (276) 26
PARENTESIS_I (277) 15 17 54 78 79 81
PARENTESIS_F (278) 15 17 54 78 79 81
LLAVE_I (279)
LLAVE_F (280)
CORCHETE_I (281) 80 82
CORCHETE_F (282) 80 82
COMENTARIO_I (283)
COMENTARIO_F (284)
PUNTO_Y_COMA (285) 80 81 84
COMA (286) 63 79
COMP_MAYOR_ESTR (287) 31
COMP_MENOR_ESTR (288) 34
COMP_MAYOR_IGUAL (289) 37
COMP_MENOR_IGUAL (290) 40
COMP_IGUAL (291) 43
COMP_DIST (292) 46
DECVAR (293) 60
ENDDEC (294) 60
WHILE (295) 15
ENDWHILE (296) 15
DO (297) 15 17
IF (298) 17
ELSE (299) 50 54
ELSIF (300) 54
ENDIF (301) 17
INTEGER (302) 65
FLOAT (303) 66
STRING (304) 67
READ (305) 56
WRITE (306) 57 58
BETWEEN (307) 79
INLIST (308) 81
COMENTARIO (309) 12


No terminales con las reglas donde aparecen

$accept (55)
    en la izquierda: 0
programa (56)
    en la izquierda: 2, en la derecha: 0
$@1 (57)
    en la izquierda: 1, en la derecha: 2
bloque (58)
    en la izquierda: 3, en la derecha: 2 15 47 50 54
lista_sentencias (59)
    en la izquierda: 4 5, en la derecha: 3 5
sentencia (60)
    en la izquierda: 6 7 8 9 10 11 12, en la derecha: 4 5
asignacion (61)
    en la izquierda: 13, en la derecha: 7
iteracion (62)
    en la izquierda: 15, en la derecha: 10
$@2 (63)
    en la izquierda: 14, en la derecha: 15
seleccion (64)
    en la izquierda: 17, en la derecha: 11
$@3 (65)
    en la izquierda: 16, en la derecha: 17
condicion (66)
    en la izquierda: 18 21 24 26 27 28, en la derecha: 15 17 54
$@4 (67)
    en la izquierda: 19, en la derecha: 21
$@5 (68)
    en la izquierda: 20, en la derecha: 21
$@6 (69)
    en la izquierda: 22, en la derecha: 24
$@7 (70)
    en la izquierda: 23, en la derecha: 24
$@8 (71)
    en la izquierda: 25, en la derecha: 26
comparacion (72)
    en la izquierda: 31 34 37 40 43 46, en la derecha: 18 21 24 26
$@9 (73)
    en la izquierda: 29, en la derecha: 31
$@10 (74)
    en la izquierda: 30, en la derecha: 31
$@11 (75)
    en la izquierda: 32, en la derecha: 34
$@12 (76)
    en la izquierda: 33, en la derecha: 34
$@13 (77)
    en la izquierda: 35, en la derecha: 37
$@14 (78)
    en la izquierda: 36, en la derecha: 37
$@15 (79)
    en la izquierda: 38, en la derecha: 40
$@16 (80)
    en la izquierda: 39, en la derecha: 40
$@17 (81)
    en la izquierda: 41, en la derecha: 43
$@18 (82)
    en la izquierda: 42, en la derecha: 43
$@19 (83)
    en la izquierda: 44, en la derecha: 46
$@20 (84)
    en la izquierda: 45, en la derecha: 46
resto (85)
    en la izquierda: 47 50 54, en la derecha: 17
$@21 (86)
    en la izquierda: 48, en la derecha: 50
$@22 (87)
    en la izquierda: 49, en la derecha: 50
$@23 (88)
    en la izquierda: 51, en la derecha: 54
$@24 (89)
    en la izquierda: 52, en la derecha: 54
$@25 (90)
    en la izquierda: 53, en la derecha: 54
lectura (91)
    en la izquierda: 56, en la derecha: 8
$@26 (92)
    en la izquierda: 55, en la derecha: 56
escritura (93)
    en la izquierda: 57 58, en la derecha: 9
bloque_declaracion (94)
    en la izquierda: 60, en la derecha: 6
$@27 (95)
    en la izquierda: 59, en la derecha: 60
declaraciones (96)
    en la izquierda: 61 62, en la derecha: 60 61
lista_id_y_tipo (97)
    en la izquierda: 63 64, en la derecha: 61 62 63
tipodato (98)
    en la izquierda: 65 66 67, en la derecha: 64
expresion (99)
    en la izquierda: 68 69 70, en la derecha: 13 31 34 37 40 43 46
    68 69 78 80 83 84
termino (100)
    en la izquierda: 71 72 73, en la derecha: 68 69 70 71 72
factor (101)
    en la izquierda: 74 75 76 77 78, en la derecha: 71 72 73
between (102)
    en la izquierda: 79, en la derecha: 27
rango (103)
    en la izquierda: 80, en la derecha: 79
inlist (104)
    en la izquierda: 81, en la derecha: 28
lista_expresiones (105)
    en la izquierda: 82, en la derecha: 81
expresiones (106)
    en la izquierda: 83 84, en la derecha: 82 84


estado 0

    0 $accept: . programa $end

    INICIO_PROGRAMA  desplazar e ir al estado 1

    programa  ir al estado 2


estado 1

    2 programa: INICIO_PROGRAMA . $@1 bloque FIN_PROGRAMA

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 3


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


estado 3

    2 programa: INICIO_PROGRAMA $@1 . bloque FIN_PROGRAMA

    ID          desplazar e ir al estado 5
    DECVAR      desplazar e ir al estado 6
    WHILE       desplazar e ir al estado 7
    IF          desplazar e ir al estado 8
    READ        desplazar e ir al estado 9
    WRITE       desplazar e ir al estado 10
    COMENTARIO  desplazar e ir al estado 11

    bloque              ir al estado 12
    lista_sentencias    ir al estado 13
    sentencia           ir al estado 14
    asignacion          ir al estado 15
    iteracion           ir al estado 16
    seleccion           ir al estado 17
    lectura             ir al estado 18
    escritura           ir al estado 19
    bloque_declaracion  ir al estado 20


estado 4

    0 $accept: programa $end .

    $default  aceptar


estado 5

   13 asignacion: ID . OP_ASIG expresion

    OP_ASIG  desplazar e ir al estado 21


estado 6

   60 bloque_declaracion: DECVAR . $@27 declaraciones ENDDEC

    $default  reduce usando la regla 59 ($@27)

    $@27  ir al estado 22


estado 7

   15 iteracion: WHILE . PARENTESIS_I condicion PARENTESIS_F $@2 DO bloque ENDWHILE

    PARENTESIS_I  desplazar e ir al estado 23


estado 8

   17 seleccion: IF . PARENTESIS_I condicion PARENTESIS_F $@3 DO resto ENDIF

    PARENTESIS_I  desplazar e ir al estado 24


estado 9

   56 lectura: READ . $@26 ID

    $default  reduce usando la regla 55 ($@26)

    $@26  ir al estado 25


estado 10

   57 escritura: WRITE . ID
   58          | WRITE . CTE_STRING

    CTE_STRING  desplazar e ir al estado 26
    ID          desplazar e ir al estado 27


estado 11

   12 sentencia: COMENTARIO .

    $default  reduce usando la regla 12 (sentencia)


estado 12

    2 programa: INICIO_PROGRAMA $@1 bloque . FIN_PROGRAMA

    FIN_PROGRAMA  desplazar e ir al estado 28


estado 13

    3 bloque: lista_sentencias .
    5 lista_sentencias: lista_sentencias . sentencia

    ID          desplazar e ir al estado 5
    DECVAR      desplazar e ir al estado 6
    WHILE       desplazar e ir al estado 7
    IF          desplazar e ir al estado 8
    READ        desplazar e ir al estado 9
    WRITE       desplazar e ir al estado 10
    COMENTARIO  desplazar e ir al estado 11

    $default  reduce usando la regla 3 (bloque)

    sentencia           ir al estado 29
    asignacion          ir al estado 15
    iteracion           ir al estado 16
    seleccion           ir al estado 17
    lectura             ir al estado 18
    escritura           ir al estado 19
    bloque_declaracion  ir al estado 20


estado 14

    4 lista_sentencias: sentencia .

    $default  reduce usando la regla 4 (lista_sentencias)


estado 15

    7 sentencia: asignacion .

    $default  reduce usando la regla 7 (sentencia)


estado 16

   10 sentencia: iteracion .

    $default  reduce usando la regla 10 (sentencia)


estado 17

   11 sentencia: seleccion .

    $default  reduce usando la regla 11 (sentencia)


estado 18

    8 sentencia: lectura .

    $default  reduce usando la regla 8 (sentencia)


estado 19

    9 sentencia: escritura .

    $default  reduce usando la regla 9 (sentencia)


estado 20

    6 sentencia: bloque_declaracion .

    $default  reduce usando la regla 6 (sentencia)


estado 21

   13 asignacion: ID OP_ASIG . expresion

    CTE_INT       desplazar e ir al estado 30
    CTE_FLOAT     desplazar e ir al estado 31
    CTE_STRING    desplazar e ir al estado 32
    ID            desplazar e ir al estado 33
    PARENTESIS_I  desplazar e ir al estado 34

    expresion  ir al estado 35
    termino    ir al estado 36
    factor     ir al estado 37


estado 22

   60 bloque_declaracion: DECVAR $@27 . declaraciones ENDDEC

    ID  desplazar e ir al estado 38

    declaraciones    ir al estado 39
    lista_id_y_tipo  ir al estado 40


estado 23

   15 iteracion: WHILE PARENTESIS_I . condicion PARENTESIS_F $@2 DO bloque ENDWHILE

    CTE_INT       desplazar e ir al estado 30
    CTE_FLOAT     desplazar e ir al estado 31
    CTE_STRING    desplazar e ir al estado 32
    ID            desplazar e ir al estado 33
    OP_NOT        desplazar e ir al estado 41
    PARENTESIS_I  desplazar e ir al estado 34
    BETWEEN       desplazar e ir al estado 42
    INLIST        desplazar e ir al estado 43

    condicion    ir al estado 44
    comparacion  ir al estado 45
    expresion    ir al estado 46
    termino      ir al estado 36
    factor       ir al estado 37
    between      ir al estado 47
    inlist       ir al estado 48


estado 24

   17 seleccion: IF PARENTESIS_I . condicion PARENTESIS_F $@3 DO resto ENDIF

    CTE_INT       desplazar e ir al estado 30
    CTE_FLOAT     desplazar e ir al estado 31
    CTE_STRING    desplazar e ir al estado 32
    ID            desplazar e ir al estado 33
    OP_NOT        desplazar e ir al estado 41
    PARENTESIS_I  desplazar e ir al estado 34
    BETWEEN       desplazar e ir al estado 42
    INLIST        desplazar e ir al estado 43

    condicion    ir al estado 49
    comparacion  ir al estado 45
    expresion    ir al estado 46
    termino      ir al estado 36
    factor       ir al estado 37
    between      ir al estado 47
    inlist       ir al estado 48


estado 25

   56 lectura: READ $@26 . ID

    ID  desplazar e ir al estado 50


estado 26

   58 escritura: WRITE CTE_STRING .

    $default  reduce usando la regla 58 (escritura)


estado 27

   57 escritura: WRITE ID .

    $default  reduce usando la regla 57 (escritura)


estado 28

    2 programa: INICIO_PROGRAMA $@1 bloque FIN_PROGRAMA .

    $default  reduce usando la regla 2 (programa)


estado 29

    5 lista_sentencias: lista_sentencias sentencia .

    $default  reduce usando la regla 5 (lista_sentencias)


estado 30

   74 factor: CTE_INT .

    $default  reduce usando la regla 74 (factor)


estado 31

   75 factor: CTE_FLOAT .

    $default  reduce usando la regla 75 (factor)


estado 32

   76 factor: CTE_STRING .

    $default  reduce usando la regla 76 (factor)


estado 33

   77 factor: ID .

    $default  reduce usando la regla 77 (factor)


estado 34

   78 factor: PARENTESIS_I . expresion PARENTESIS_F

    CTE_INT       desplazar e ir al estado 30
    CTE_FLOAT     desplazar e ir al estado 31
    CTE_STRING    desplazar e ir al estado 32
    ID            desplazar e ir al estado 33
    PARENTESIS_I  desplazar e ir al estado 34

    expresion  ir al estado 51
    termino    ir al estado 36
    factor     ir al estado 37


estado 35

   13 asignacion: ID OP_ASIG expresion .
   68 expresion: expresion . OP_SUM termino
   69          | expresion . OP_REST termino

    OP_SUM   desplazar e ir al estado 52
    OP_REST  desplazar e ir al estado 53

    $default  reduce usando la regla 13 (asignacion)


estado 36

   70 expresion: termino .
   71 termino: termino . OP_MULT factor
   72        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 54
    OP_DIV   desplazar e ir al estado 55

    $default  reduce usando la regla 70 (expresion)


estado 37

   73 termino: factor .

    $default  reduce usando la regla 73 (termino)


estado 38

   63 lista_id_y_tipo: ID . COMA lista_id_y_tipo
   64                | ID . OP_DEC tipodato

    OP_DEC  desplazar e ir al estado 56
    COMA    desplazar e ir al estado 57


estado 39

   60 bloque_declaracion: DECVAR $@27 declaraciones . ENDDEC
   61 declaraciones: declaraciones . lista_id_y_tipo

    ID      desplazar e ir al estado 38
    ENDDEC  desplazar e ir al estado 58

    lista_id_y_tipo  ir al estado 59


estado 40

   62 declaraciones: lista_id_y_tipo .

    $default  reduce usando la regla 62 (declaraciones)


estado 41

   26 condicion: OP_NOT . $@8 comparacion

    $default  reduce usando la regla 25 ($@8)

    $@8  ir al estado 60


estado 42

   79 between: BETWEEN . PARENTESIS_I ID COMA rango PARENTESIS_F

    PARENTESIS_I  desplazar e ir al estado 61


estado 43

   81 inlist: INLIST . PARENTESIS_I ID PUNTO_Y_COMA lista_expresiones PARENTESIS_F

    PARENTESIS_I  desplazar e ir al estado 62


estado 44

   15 iteracion: WHILE PARENTESIS_I condicion . PARENTESIS_F $@2 DO bloque ENDWHILE

    PARENTESIS_F  desplazar e ir al estado 63


estado 45

   18 condicion: comparacion .
   21          | comparacion . $@4 OP_AND $@5 comparacion
   24          | comparacion . $@6 OP_OR $@7 comparacion

    OP_AND    reduce usando la regla 19 ($@4)
    OP_OR     reduce usando la regla 22 ($@6)
    $default  reduce usando la regla 18 (condicion)

    $@4  ir al estado 64
    $@6  ir al estado 65


estado 46
